...
            let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
                guard let self = self else { return }
                
                self.presenter.restartGame()
            }
            
            action.setValue("RestartButtonIdentifier", forKey: "accessibilityIdentifier")
            alertModel.addAction(action)
            
            alertModel.view.accessibilityIdentifier = "Game results"
            
            if let gameResultsButton = alertModel.view.subviews.first(where: { $0.accessibilityIdentifier == "GameResults" }) as? UIButton {
                   gameResultsButton.accessibilityIdentifier = "RestartButtonIdentifier"
...
